Payment gateway integrated

--- a/popcorn-web-streming-service-backend/config.json
+++ b/popcorn-web-streming-service-backend/config.json
@@ -9,5 +9,9 @@
   "email": {
     "id": "pratikgaikwad1004@gmail.com",
     "password": "zngnymzkgbjarexp"
+  },
+  "payment": {
+    "key": "rzp_test_gLNr8sqIvzM92n",
+    "secret": "OoNCgzuHkCMHY1TLG7uBjKbE"
   }
 }
