--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "admin_panel": "cd popcorn-web-streming-service-admin-panel && npm start",
     "backend": "cd popcorn-web-streming-service-backend && nodemon index.js",
     "frontend": "cd popcorn-web-streming-service-frontend && npm start"
+  },
+  "dependencies": {
+    "react-top-loading-bar": "^2.3.1"
   }
 }
